feature/CHPBUG-7: test for jwt validator